--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ttv.livedemo">
+    package="com.nitap.attendance">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -44,7 +44,7 @@
 
 
         <activity
-            android:name="com.ttv.livedemo.CameraActivity"
+            android:name="com.nitap.attendance.CameraActivity"
             android:exported="true">
 
 
@@ -53,7 +53,7 @@
 
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.nitap.attendance.MainActivity"
             android:exported="true">
 
 
@@ -61,7 +61,7 @@
     </activity>
 
         <activity
-            android:name=".BluetoothScannerActivity"
+            android:name="com.nitap.attendance.BluetoothScannerActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -69,7 +69,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.ttv.livedemo.ActivationActivity" android:exported="false" />
+        <activity android:name="com.nitap.attendance.ActivationActivity" android:exported="false" />
         <activity android:name="qrcode.QrCodeActivity" android:exported="false" />
     </application>
 
