--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@ uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
         android:supportsRtl="true"
         android:theme="@style/Theme.TTVLiveDemo">
         <activity
+            android:name=".FaceRecognitionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false" />
+        <activity
             android:name=".PermissionsActivity"
             android:exported="false" />
         <activity
@@ -62,7 +68,7 @@ uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
             android:exported="true" />
         <activity
             android:name=".BluetoothScannerActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ActivationActivity"
             android:exported="false" />
