--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@ uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="MERGE2"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/nitap"
+        android:label="NIT AP ATTENDANCE"
+        android:roundIcon="@mipmap/nitap"
         android:supportsRtl="true"
         android:theme="@style/Theme.TTVLiveDemo">
         <activity
